--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,10 @@
+body {
+
+}
+
+
+
+
 .main-title{
   background: #337ab7;
   color: white;
@@ -10,6 +17,7 @@
   display: grid;
   grid-template-areas:"vertical-menu book-details";
   grid-template-columns: 100px 900px;
+
 }
 
 .vertical-menu {
@@ -57,6 +65,3 @@
 }
 
 
-.modal {
-  /*background: rgba(0, 0, 0, 0.55);*/
-}
