--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,183 +2,195 @@ body {
 
 }
 
-
-.main-title{
-  background: #337ab7;
-  color: white;
-  text-align: center;
-  padding: 10px;
-  width: 100%;
-  margin: 0;
+.main-title {
+    background: #337ab7;
+    color: white;
+    text-align: center;
+    padding: 16px;
+    width: 100%;
+    margin: 0;
+    font-size: 3rem;
 }
 
-.main-img{
-  width: 100%;
-  height: 299px;
+.main-img {
+    width: 100%;
+    height: 462px;
 }
 
 .small-title {
-  font-weight: 400;
-  margin: 0 0 0 0;
-  padding: 30px 0;
-  text-align: center;
-  font-size: 15px;
-  color: #337ab7;
-  background: #e8e9eb;
+    font-weight: 400;
+    margin: 0 0 0 0;
+    padding: 35px 0;
+    text-align: center;
+    font-size: 21px;
+    color: #337ab7;
+    background: #e8e9eb;
 }
 
-
 .vertical-menu {
-  overflow-x: scroll;
-  padding: 0;
-  list-style-type: none;
-  border-right: #d6d6d6 thin;
-  white-space: nowrap;
-  /*background: #e8e9eb;*/
-  width: 94%;
-  margin: 0 auto;
+    overflow-x: scroll;
+    padding: 0;
+    list-style-type: none;
+    border-right: #d6d6d6 thin;
+    white-space: nowrap;
+    /*background: #e8e9eb;*/
+    width: 94%;
+    margin: 0 auto;
 }
 
 .vertical-menu li {
-  width: 200px;
-  display: inline-block;
-  justify-self: center;
-  margin: 0 auto;
-  padding: 10px;
+    width: 260px;
+    display: inline-block;
+    justify-self: center;
+    margin: 0 auto;
+    padding: 10px;
 }
 
 .vertical-menu li:hover {
-  cursor: pointer;
-  color: white;
-  background-color: #f4f4f4;
+    cursor: pointer;
+    color: white;
+    background-color: #f4f4f4;
 }
 
-.link-container{
-  display: grid;
-  justify-items: center;
-  justify-content: center;
+.link-container {
+    display: grid;
+    justify-items: center;
+    justify-content: center;
 }
 
-.link{
-  display: inline-block;
-  color: white;
-  padding: 30px 12px 12px 12px;
-  text-decoration: none;
-  margin-bottom: 9px;
+.link {
+    display: inline-block;
+    color: white;
+    padding: 30px 12px 12px 12px;
+    text-decoration: none;
+    margin-bottom: 9px;
 }
 
 .menu-img-book {
-  width: 50px;
-  max-width: 100%;
-  height: 80px;
-  display: block;
-  justify-self: center;
-  margin: 0 auto;
-  padding-bottom: 5px;
+    width: 97px;
+    max-width: 100%;
+    height: 130px;
+    display: block;
+    justify-self: center;
+    margin: 0 auto;
+    padding-bottom: 5px;
 }
 
-.link-text{
-  color: #337ab7;
-  overflow: hidden;
-  max-width: 175px;
-  font-size: 10px;
-  text-overflow: ellipsis;
-  margin: 0 auto;
+.link-text {
+    color: #337ab7;
+    overflow: hidden;
+    max-width: 175px;
+    font-size: 17px;
+    text-overflow: ellipsis;
+    margin: 0 auto;
 }
 
 /**  STYLE 10 */
 .vertical-menu::-webkit-scrollbar-thumb {
-  border-radius: 10px;
-  background: linear-gradient(left, #b8cae5, #abc9ea);
-  box-shadow: inset 0 0 1px 1px #5C6670;
+    border-radius: 10px;
+    background: linear-gradient(left, #b8cae5, #abc9ea);
+    box-shadow: inset 0 0 1px 1px #5C6670;
 }
 
-
 .vertical-menu::-webkit-scrollbar-track {
-  border-radius: 10px;
-  background: #eee;
-  box-shadow: 0 0 1px 1px #bbb, inset 0 0 7px rgba(183, 183, 183, 0.3)
+    border-radius: 10px;
+    background: #eee;
+    box-shadow: 0 0 1px 1px #bbb, inset 0 0 7px rgba(183, 183, 183, 0.3)
 }
 
 .vertical-menu::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(left, #8391A6, #337ab7);
-  height: 30px;
+    background: linear-gradient(left, #8391A6, #337ab7);
+    height: 30px;
 }
 
 .vertical-menu::-webkit-scrollbar {
-  height: 7px;
-  background-color: #F5F5F5;
+    height: 7px;
+    background-color: #F5F5F5;
 }
 
-
-
-
-
-
-
-.home{
-  text-align: end;
+.home {
+    text-align: end;
 
 }
 
-.welcome{
-  font-size: 12px;
+.welcome {
+    font-size: 12px;
 }
 
-
-
-
-
-
-
-.book-details-container{
-  margin-top: 75px ;
-
+.book-details-container {
+    margin: 75px 0;
 
 }
 
-.book-details{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  /*grid-gap: 28px;*/
-  justify-items: center;
-  width: 65%;
-  margin: 0 auto;
+.book-details {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 28px;
+    justify-items: center;
+    width: 60%;
+    margin: 0 auto;
+}
+
+.book-img {
+    width: 285px;
+    max-width: 100%;
+    height: 340px;
+    margin-top: 30px;
+    justify-self: start;
+}
+
+.book-details-text {
+    text-align: center;
+    font-size: 18px;
+    color: #337ab7;
+    align-self: center;
+}
+
+.book-title {
+    font-size: 40px;
+    margin: 15px 0 40px 0;
+    text-align: center;
+}
+
+.current-buttons {
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: max-content max-content;
+    justify-content: center;
+    grid-gap: 6px;
 
 }
 
-.book-img{
-  width: 200px;
-  max-width: 100%;
-  height: 290px;
-  margin-top:30px;
+.btn.current-button {
+    width: max-content;
+    /*height: 1px;*/
+    font-size: 15px;
+}
+
+.delete-message {
+    margin: 30px 0;
+    font-size: 20px;
+    color: red;
+}
+
+@media (max-width: 600px) {
+    .book-details {
+        grid-template-columns: 1fr;
+    }
+
+    .main-img {
+        height: 363px;
+    }
+}
+
+@media (max-width: 300px) {
+    .vertical-menu li {
+        width: 280px;
+    }
+    .main-img {
+        height: 250px;
+    }
+
 }
 
 
-.book-details-text{
-  text-align: center;
-  font-size: 15px;
-  color: #337ab7;
-  align-self: center;
-}
-
-.book-title{
-  font-size: 30px;
-  margin: 15px 0 40px 0;
-  text-align: center;
-}
-
-.current-buttons{
-  margin-top: 30px;
-  display: grid;
-  grid-template-columns: max-content max-content;
-  justify-content: center;
-  grid-gap: 6px;
-}
-
-
-.delete-message{
-  margin: 30px 0;
-  font-size: 20px;
-  color:red;
-}
